avoid white space under footer

--- a/branding/css/spacewalk-theme.less
+++ b/branding/css/spacewalk-theme.less
@@ -8,7 +8,7 @@ footer {
 	color: #cfcfcf;
 	font-weight: normal;
 	font-size: 0.9em;
-	height: 80px;
+	min-height: 80px;
 	clear: both;
 
 	.make-row(0);
